--- a/ikatech_invoice/report/invoice_report.xml
+++ b/ikatech_invoice/report/invoice_report.xml
@@ -79,57 +79,56 @@
 
         <template id="report_invoice_document_ikatech" >
             <t t-call="ikatech_invoice.ikatech_external_layout">
-                <t t-set="o" t-value="o.with_context({'lang':o.partner_id.lang})" />
+                <t t-set="o" t-value="o.with_context({'lang':o.partner_id.lang})"/>
 
                 <div class="page" style="padding-top: -10px; font-size:18px;">
                     <div class="row">
                     <!--INICIA LOGO DE LA EMPRESA-->
                         <div class="col-3">
-                            <img t-if="o.company_id.logo" t-att-src="'data:image/png;base64,%s' % to_text(o.company_id.logo)"
-                            style="max-height: 180px;max-width: 180px;" />
+                            <img t-if="o.company_id.logo" t-att-src="'data:image/png;base64,%s' % to_text(o.company_id.logo)" style="max-height: 180px;max-width: 180px;"/>
                         </div>
                     <!--TERMINA LOGO DE LA EMPRESA-->
 
                         <!--EMPIEZA DATOS DEL EMISOR-->
-                        <div class="col-5" >
+                        <div class="col-5">
                             <center>
                                 <strong><span t-field="o.company_id.name" style="font-size:16px"/></strong>
                                 <div style="font-size:11px">
                                     <span t-field="o.company_id.street_name"/>
-                                    <![CDATA[&nbsp;]]>
+                                    &amp;nbsp;
                                     <div t-if="o.company_id.street_number">
                                     <span>No Ext.</span>
-                                    <![CDATA[&nbsp;]]>
+                                    &amp;nbsp;
                                     <span t-field="o.company_id.street_number"/>
                                     </div>
-                                    <![CDATA[&nbsp;]]>
+                                    &amp;nbsp;
                                     <div t-if="o.company_id.street_number2">
                                     <span>No Int.</span>
-                                    <![CDATA[&nbsp;]]>
+                                    &amp;nbsp;
                                     <span t-field="o.company_id.street_number2"/>
                                     </div>
-                                    <![CDATA[&nbsp;]]>
+                                    &amp;nbsp;
                                     <div t-if="o.company_id.l10n_mx_edi_colony">
                                     <span>Colonia</span>
-                                    <![CDATA[&nbsp;]]>
+                                    &amp;nbsp;
                                     <span t-field="o.company_id.l10n_mx_edi_colony"/>
                                     </div>
-                                    <![CDATA[&nbsp;]]>
+                                    &amp;nbsp;
                                     <span>CP.</span>
-                                    <![CDATA[&nbsp;]]>
+                                    &amp;nbsp;
                                     <span t-field="o.company_id.zip"/>,
-                                    <![CDATA[&nbsp;]]>
+                                    &amp;nbsp;
                                     <span t-field="o.company_id.city"/>,
-                                    <![CDATA[&nbsp;]]>
+                                    &amp;nbsp;
                                     <span t-field="o.company_id.state_id.name"/>
-                                    <![CDATA[&nbsp;]]>
+                                    &amp;nbsp;
                                     <span t-field="o.company_id.country_id.name"/>
                                     <br/>
                                     <span>Telefono:</span>
-                                    <![CDATA[&nbsp;]]>
+                                    &amp;nbsp;
                                     <span t-field="o.company_id.phone"/><br/>
-                                    <![CDATA[&nbsp;]]>
-                                    <span>Sitio Web:<![CDATA[&nbsp;]]></span><spant t-field="o.company_id.website"/>
+                                    &amp;nbsp;
+                                    <span>Sitio Web:&amp;nbsp;</span><spant t-field="o.company_id.website"/>
                                 </div>
                             </center>
                         </div>
@@ -155,7 +154,7 @@
                                     </span>
                                     <span t-if="o.move_type == 'out_invoice' and o.state == 'posted' and o.company_id.country_id.name=='Costa Rica'">
                                         <strong>
-                                            <t t-esc = "dict (o.fields_get (allfields = ['tipo_documento']) ['tipo_documento'] ['selection']) [o.tipo_documento]" />
+                                            <t t-esc="dict (o.fields_get (allfields = ['tipo_documento']) ['tipo_documento'] ['selection']) [o.tipo_documento]"/>
                                         </strong><br/>
                                     </span>
                                     <span t-if="o.move_type == 'out_invoice' and o.state == 'draft'"><strong><span>FACTURA BORRADOR</span></strong><br/></span>
@@ -165,7 +164,7 @@
                                     <span t-if="o.move_type == 'in_invoice'"><strong><span>FACTURA PROVEEDOR</span></strong><br/></span>
                                     <span t-if="o.company_id.country_id.name=='México'"><span>FOLIO:</span></span>
                                     <span t-if="o.company_id.country_id.name=='Colombia'"><span>NÚMERO:</span></span>
-                                    <![CDATA[&nbsp;]]><span t-if="o.name != '/'" t-field="o.name"/>
+                                    &amp;nbsp;<span t-if="o.name != '/'" t-field="o.name"/>
                                 </center>
                             </div>
                         </div>
@@ -181,18 +180,18 @@
                             <table style="border-spacing: 5px; border-collapse: separate;">
                                 <tr>
                                     <td><strong><span>FECHA</span></strong></td>
-                                    <td>:<![CDATA[&nbsp;]]><span t-field="o.invoice_date" t-options='{"format": "dd/MM/yyyy"}'/><br/></td>
+                                    <td>:&amp;nbsp;<span t-field="o.invoice_date" t-options="{&quot;format&quot;: &quot;dd/MM/yyyy&quot;}"/><br/></td>
                                 </tr>
                                 <tr>
                                     <td><strong><span>CLIENTE</span></strong></td>
-                                    <td>:<![CDATA[&nbsp;]]><span t-field="o.partner_id.name"/></td>
+                                    <td>:&amp;nbsp;<span t-field="o.partner_id.name"/></td>
                                 </tr>
                                 <tr>
                                     <td><strong><span>DIRECCIÓN</span></strong></td>
-                                    <td>:<![CDATA[&nbsp;]]><span t-field="o.partner_id.street_name"/></td>
+                                    <td>:&amp;nbsp;<span t-field="o.partner_id.street"/>, &amp;nbsp;<span t-field="o.partner_id.l10n_mx_edi_colony"/></td>
                                 </tr>
                                 <tr>
-                                    <td><strong><span>CONTACTO: <![CDATA[&nbsp;]]></span></strong></td>
+                                    <td><strong><span>CONTACTO: &amp;nbsp;</span></strong></td>
                                 </tr>
                             </table>
                         </div>
@@ -211,20 +210,20 @@
                                             <strong><span t-esc="o.partner_id.identification_id.name" style="text-transform: uppercase;"/></strong>
                                         </t>
                                     </td>
-                                    <td>:<![CDATA[&nbsp;]]><span t-field="o.partner_id.vat"/></td>
+                                    <td>:&amp;nbsp;<span t-field="o.partner_id.vat"/></td>
                                 </tr>
                                 <tr>
                                     <td><strong><span>CIUDAD</span></strong></td>
-                                    <td>:<![CDATA[&nbsp;]]><span t-field="o.partner_id.city"/></td>
+                                    <td>:&amp;nbsp;<span t-field="o.partner_id.city"/></td>
                                 </tr>
                                 <tr>
                                     <td><strong><span>VENCIMIENTO</span></strong></td>
-                                    <td>:<![CDATA[&nbsp;]]><span t-field="o.invoice_date_due"/></td>
+                                    <td>:&amp;nbsp;<span t-field="o.invoice_date_due"/></td>
                                 </tr>
 
                                 <tr t-if="o.company_id.country_id.name=='México'">
                                     <td><strong><span>FORMA DE PAGO</span><br/></strong></td>
-                                    <td>:<![CDATA[&nbsp;]]><span t-esc="'%s - %s' % (o.l10n_mx_edi_payment_method_id.code, o.l10n_mx_edi_payment_method_id.name)"/></td>
+                                    <td>:&amp;nbsp;<span t-esc="'%s - %s' % (o.l10n_mx_edi_payment_method_id.code, o.l10n_mx_edi_payment_method_id.name)"/></td>
                                 </tr>
                             </table>
                         </div>
@@ -344,14 +343,16 @@
                    <p t-if="o.move_type in ('out_invoice', 'in_refund') and o.payment_reference" name="payment_communication" style="font-size:14px">
                         Utilize la siguiente referencia al realizar su pago : <b><span t-field="o.payment_reference"/></b>
                     </p>
-                    <p class="text-left" style="padding:2px 2px 2px 2px; font-size:14px " t-if="o.move_type in ('out_invoice', 'in_refund') and o.number_electronic">
-                      Clave:<span t-field="o.number_electronic"/><![CDATA[&nbsp;&nbsp;&nbsp;]]>// Usuario:<span t-field="o.user_id.name"/><br/>
-                      Autorizada mediante resolución No DGT-R-033-2019 del 20 de junio de 2019
-                    </p>
+                    <t t-if="o.number_electronic">
+                      <p class="text-left" style="padding:2px 2px 2px 2px; font-size:14px " t-if="o.move_type in ('out_invoice', 'in_refund') and o.number_electronic">
+                        Clave:<span t-field="o.number_electronic"/>&amp;nbsp;&amp;nbsp;&amp;nbsp;// Usuario:<span t-field="o.user_id.name"/><br/>
+                        Autorizada mediante resolución No DGT-R-033-2019 del 20 de junio de 2019
+                      </p>
+                    </t>
                     <p t-if="o.invoice_payment_term_id" name="payment_term" style="font-size:14px">
                         <span t-field="o.invoice_payment_term_id.note"/>
                     </p>
-                    <div t-if="not is_html_empty(o.narration)" name="comment" >
+                    <div t-if="not is_html_empty(o.narration)" name="comment">
                         <span t-field="o.narration" style="font-size:12px"/>
                     </div>
                     <p t-if="not is_html_empty(o.fiscal_position_id.note)" name="note">
@@ -367,7 +368,7 @@
                         </p>
                     </div>
                     <!-- Is there a discount on at least one line? -->
-                    <t t-set="display_discount" t-value="any([l.discount for l in o.invoice_line_ids])" />
+                    <t t-set="display_discount" t-value="any([l.discount for l in o.invoice_line_ids])"/>
                     <t t-set="amount_total" t-value="0.0"/>
                     <t t-set="amount_untaxed" t-value="0.0"/>
 
