--- a/l10n_bo_edi/views/account_move_form_inherit.xml
+++ b/l10n_bo_edi/views/account_move_form_inherit.xml
@@ -89,7 +89,7 @@
             </xpath> -->
             <!--//?? WORKAROUND DE DESCUENTO GLOBAL POR NUEVO CAMPO  -->
 
-            <xpath expr="//sheet//group[1]//group[2]//div[@name='journal_div']" position="after" attrs="{'invisible': [('country_code', '!=', 'BO')]}">
+            <xpath expr="//sheet//group[1]//group[@id='header_right_group']//div[@name='journal_div']" position="after" attrs="{'invisible': [('country_code', '!=', 'BO')]}">
                 <!--attrs="{'invisible': [('country_code', '!=', 'BO')]}"-->
                 <!-- <div id="l10n_bo_edi_section_config" class="row mt16 o_settings_container"> -->
                     <!-- <field name="invoice_mails" invisible="1"/> -->
