--- a/l10n_bo_edi/views/res_config_settings_view.xml
+++ b/l10n_bo_edi/views/res_config_settings_view.xml
@@ -37,7 +37,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-6 o_setting_box">
+                        <!-- <div class="col-12 col-lg-6 o_setting_box">
                             <div class="o_setting_left_pane"/>
                             <div class="o_setting_right_pane">
                                 <span class="o_form_label">Accounting Reports</span>
@@ -53,7 +53,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div id="l10n_bo_section2" class="row mt16 o_settings_container">
