--- a/soa_integrations/views/category_view.xml
+++ b/soa_integrations/views/category_view.xml
@@ -8,10 +8,24 @@
             <field name="arch" type="xml">
                 <xpath expr="//group[@name='first']" position="after">
                     <group>
-                        <field name="company_id"/>
+                        <field name="cod_soa"/>
+                        <field name="company_id" groups="base.group_multi_company" required="1" readonly="1"/>
                     </group>
                 </xpath>
             </field>
         </record>
+
+        <record id="product_category_list_view_integra" model="ir.ui.view">
+            <field name="name">category.list.view.integra</field>
+            <field name="model">product.category</field>
+            <field name="inherit_id" ref="product.product_category_list_view"/>
+            <field name="arch" type="xml">
+                <field name="display_name" position="after">
+                    <field name="cod_soa"/>
+                    <field name="company_id"/>
+                </field>
+            </field>
+        </record>
+
     </data>
 </odoo>
